--- a/index.html
+++ b/index.html
@@ -236,6 +236,55 @@
         </article>
 
         <!-- Publications -->
+        <article id="publications">
+          <h2 class="major">Publications</h2>
+          <h3 class="project-title">
+            <a href="https://www.xajzkjdx.cn/gallery/1-may2021.pdf"
+              >Natural Language Processing with Disaster tweets using
+              Bidirectional LSTM</a
+            >
+          </h3>
+
+          <p class="project-desc">
+            The growth and impact of social network resulted not only in huge
+            collection of data but also as a reliable source of data to draw
+            valuable information from. Twitter, one of the major social
+            platforms is used for collection of tweets related to a disaster.
+            The tweets are written by the people in an area who are affected by
+            a particular disaster for multiple reasons: to seek help, to express
+            grief or to show the seriousness of the situation. Some tweets are
+            also written by the non-local people to bring awareness. These
+            tweets are identified by the hashtags and collected for further
+            analysis and classification of tweets as original or hoax. The
+            method discussed in this paper is bidirectional long short-term
+            memory to classify tweets and obtain accuracy of 88 percent.
+          </p>
+          <hr class="groove-line-bar" />
+          <h3 class="project-title">
+            <a
+              href="https://irjmets.com/uploadedfiles/paper/volume3/issue_1_january_2021/5675/1628083230.pdf"
+            >
+              Facial Recognition And attendance System Using dlib AND
+              face_recognition libraries</a
+            >
+          </h3>
+          <p class="project-desc">
+            An Overview to the computer vision algorithms used for facial
+            recognition. The main article idea is to explore an algorithm which
+            can be used in biometric attendance systems with suitable methods
+            and available inputs. The algorithm mainly uses histogram-oriented
+            gradients for finding the faces, estimation of face landmarks,
+            support vector machine to recognize the face and Deep convolutional
+            networks to compare faces. The basis and scientific procedure for
+            facial recognition is described in the article. A basic application
+            is also developed in order to mark the time of the face appears is
+            .csv format and attendance is marked. The article mainly uses dlib
+            and face_recognition libraries in order to provide the
+            functionality.
+          </p>
+        </article>
+
+        <!-- Education -->
         <article id="education">
           <h2 class="major">Education</h2>
           <h3 class="project-title">
